--- a/package.json
+++ b/package.json
@@ -4,15 +4,18 @@
   "main": "index.js",
   "scripts": {
     "start": "expo start",
-    "android": "expo start --android",
-    "ios": "expo start --ios",
-    "web": "expo start --web"
+    "android": "expo run:android",
+    "ios": "expo run:ios",
+    "lint": "eslint .",
+    "typecheck": "tsc --noEmit"
   },
   "dependencies": {
     "@react-native-async-storage/async-storage": "^2.2.0",
     "@react-navigation/bottom-tabs": "^7.4.6",
     "@react-navigation/native": "^7.1.17",
     "@react-navigation/native-stack": "^7.3.25",
+    "@expo/vector-icons": "^14.0.2",
+    "expo-clipboard": "^5.0.1",
     "expo": "~53.0.22",
     "expo-document-picker": "^13.1.6",
     "expo-file-system": "^18.1.11",
@@ -35,6 +38,10 @@
   "devDependencies": {
     "@babel/core": "^7.20.0",
     "@types/react": "~19.0.10",
+    "@types/react-native": "~0.79.3",
+    "eslint": "^8.57.0",
+    "eslint-config-universe": "^12.1.0",
+    "prettier": "^3.3.3",
     "typescript": "~5.8.3"
   },
   "private": true
